Refactor `TaskStatus` and `AchievementType` to enums across the codebase